<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Registro">

<TextView
    android:id="@+id/tx_Titulo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/pagina_de_registro"
    android:textSize="24sp"
    app:layout_constraintEnd_toStartOf="@+id/gl_derecho"
    app:layout_constraintStart_toStartOf="@+id/gl_izquierdo"
    app:layout_constraintTop_toTopOf="@+id/guideline3" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/gl_izquierdo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="42dp"
    app:layout_constraintStart_toStartOf="parent" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/gl_derecho"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="24dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintGuide_begin="381dp" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="42dp"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/tx_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:ems="10"
    android:inputType="textPassword"
    android:text="@string/password"
    app:layout_constraintEnd_toEndOf="@+id/tx_email"
    app:layout_constraintHorizontal_bias="0.558"
    app:layout_constraintStart_toStartOf="@+id/tx_email"
    app:layout_constraintTop_toBottomOf="@+id/tx_email"
    android:importantForAutofill="no"
    tools:ignore="LabelFor" />

<EditText
    android:id="@+id/tx_Usuario"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:autofillHints=""
    android:ems="10"
    android:inputType="textPersonName"
    android:labelFor="@id/tx_Usuario"
    android:text="@string/nombre_usuario"
    app:layout_constraintEnd_toStartOf="@+id/gl_derecho"
    app:layout_constraintStart_toStartOf="@+id/gl_izquierdo"
    app:layout_constraintTop_toBottomOf="@+id/tx_Titulo" />

<EditText
    android:id="@+id/tx_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:ems="10"
    android:importantForAutofill="no"
    android:inputType="textEmailAddress"
    android:labelFor="@id/tx_email"
    app:layout_constraintEnd_toEndOf="@+id/tx_Usuario"
    app:layout_constraintStart_toStartOf="@+id/tx_Usuario"
    app:layout_constraintTop_toBottomOf="@+id/tx_Usuario"
    tools:text="correoelectronico" />

<EditText
    android:id="@+id/editTextTextPassword2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:ems="10"
    android:hint="@string/confirme_contrase_a"
    android:inputType="textPassword"
    android:text="@string/password"
    app:layout_constraintEnd_toEndOf="@+id/tx_password"
    app:layout_constraintStart_toStartOf="@+id/tx_password"
    app:layout_constraintTop_toBottomOf="@+id/tx_password"
    android:importantForAutofill="no" />

<Spinner
    android:id="@+id/sp_edad"
    android:layout_width="270dp"
    android:layout_height="21dp"
    android:layout_marginTop="16dp"
    android:dropDownWidth="wrap_content"
    android:entries="@array/EDAD"
    android:spinnerMode="dropdown"
    app:layout_constraintEnd_toStartOf="@+id/gl_derecho"
    app:layout_constraintStart_toStartOf="@+id/gl_izquierdo"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/seleccion_eedad"
    app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

<Button
    android:id="@+id/tb_registrar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:orientation="horizontal"
    android:text="@string/registrar"
    app:layout_constraintEnd_toStartOf="@+id/gl_derecho"
    app:layout_constraintHorizontal_bias="0.464"
    app:layout_constraintStart_toStartOf="@+id/gl_izquierdo"
    app:layout_constraintTop_toBottomOf="@+id/rg_genero" />

<RadioGroup
    android:id="@+id/rg_genero"
    android:layout_width="145dp"
    android:layout_height="91dp"
    android:layout_marginTop="32dp"
    android:checkedButton="@id/rdbt_Femenino"
    app:layout_constraintEnd_toStartOf="@+id/gl_derecho"
    app:layout_constraintStart_toStartOf="@+id/gl_izquierdo"
    app:layout_constraintTop_toBottomOf="@+id/sp_edad">

    <RadioButton
        android:id="@+id/rdbt_Femenino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/femenino" />

    <RadioButton
        android:id="@+id/rdbt_Masculino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masculino" />
</RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>

